desktop view done

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                         class="StyledInlineSvg-sc-45a1y2-0 gfYsDE fetched-icon">
                         <path fill-rule="evenodd" clip-rule="evenodd"
-                            d="M14.1922 15.6064C13.0236 16.4816 11.5723 17 10 17C6.13401 17 3 13.866 3 10C3 6.13401 6.13401 3 10 3C13.866 3 17 6.13401 17 10C17 11.5723 16.4816 13.0236 15.6064 14.1922L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3166 21.0976 19.6834 21.0976 19.2929 20.7071L14.1922 15.6064ZM15 10C15 12.7614 12.7614 15 10 15C7.23858 15 5 12.7614 5 10C5 7.23858 7.23858 5 10 5C12.7614 5 15 7.23858 15 10Z"
+                                             d="M14.1922 15.6064C13.0236 16.4816 11.5723 17 10 17C6.13401 17 3 13.866 3 10C3 6.13401 6.13401 3 10 3C13.866 3 17 6.13401 17 10C17 11.5723 16.4816 13.0236 15.6064 14.1922L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3166 21.0976 19.6834 21.0976 19.2929 20.7071L14.1922 15.6064ZM15 10C15 12.7614 12.7614 15 10 15C7.23858 15 5 12.7614 5 10C5 7.23858 7.23858 5 10 5C12.7614 5 15 7.23858 15 10Z"
                             fill="#191919ff"></path>
                     </svg>
 
@@ -282,7 +282,7 @@
 "></path>
                                 </svg>
                             </div>
-                            <p>18.2M ratings</p>
+                            <p class="p1">18.2M ratings</p>
                         </div>
 
                     </div>
@@ -355,7 +355,7 @@
                         <div class="feac">
                             <h2>Get the best DoorDash experience</h2>
                             <h3>Experience the best your neighborhood has to offer, all in one app.</h3>
-                            <div class="anchors">
+                            <div class="anchors get">
                                 <a href="">Get the app </a>
 
                                 <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
@@ -392,7 +392,7 @@
 
                         <div class="my">
                             <h3>Everything you crave, delivered.</h3>
-                            <h5>Your favorite local restraurants</h5>
+                            <h5>Your favorite local restaurants</h5>
                             <p>
                                 Get a slice of pizza or the whole pie delivered, or pick up house lo mein from the
                                 Chinese
@@ -409,7 +409,7 @@
                         <div class="image">
                             <!-- <img src="assets/dashpass_mobile.avif" alt=""> -->
                             <picture>
-                                <source media="(min-width: 768px)" srcset="assets/dashpass_mobile.avif">
+                                <source media="(min-width: 768px)" srcset="assets/food.png">
                                 <img src="assets/get.avif" alt="">
                             </picture>
 
@@ -541,7 +541,7 @@
             <h1>Unlocking opportunity for Dashers and businesses</h1>
 
         </div>
-        <div class="bg">
+        <div class="bgg">
             <div class="content">
                 <div class="o">
                     <div class="dasher">
@@ -568,7 +568,7 @@
                         <div class="image">
                             <!-- <img src="assets/work_with_doordash_desktop.avif" alt=""> -->
                               <picture>
-                                <source media="(min-width: 768px)" srcset="work_with_doordash_desktop.avif">
+                                <source media="(min-width: 768px)" srcset="assets/work_with_doordash_desktop.avif">
                                 <img src="assets/partner.avif" alt="">
                             </picture>
 
@@ -865,7 +865,7 @@
                     <div class="trio">
 
                         <div class="get">
-                            <h4>Get to know us</h4>
+                            <h4>Get to Know Us</h4>
 
                             <a href="#">About Us</a>
                             <a href="#">Careers</a>
@@ -914,10 +914,10 @@
                                 </path>
                             </svg>
                         </div>
-                        <a>Terms of Service</a>
-                        <a>Privacy</a>
-                        <a>Delivery Locations</a>
-                        <a>Do Not Sell or Share My Personal Information</a>
+                        <span>Terms of Service</span>
+                        <span>Privacy</span>
+                        <span>Delivery Locations</span>
+                        <span>Do Not Sell or Share My Personal Information</span>
                         <span>© 2025 DoorDash</span>
                     </div>
 
@@ -942,7 +942,7 @@
                     </div>
 
                     <div class="navv">
-                        <a href="https://facebook.com">
+                        <a class="a1" href="https://facebook.com">
 
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
@@ -951,7 +951,7 @@
                                     d="M21 12C21 7.02943 16.9706 3 12 3C7.02943 3 3 7.02943 3 12C3 16.4922 6.29117 20.2155 10.5938 20.8907V14.6016H8.30859V12H10.5938V10.0172C10.5938 7.76156 11.9374 6.51562 13.9932 6.51562C14.9779 6.51562 16.0078 6.69141 16.0078 6.69141V8.90625H14.8729C13.7549 8.90625 13.4062 9.60001 13.4062 10.3117V12H15.9023L15.5033 14.6016H13.4062V20.8907C17.7088 20.2155 21 16.4922 21 12Z"
                                     fill="#C4C4C4"></path>
                             </svg></a>
-                        <a href="https://twitter.com"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        <a class="a1" href="https://twitter.com"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                 class="StyledInlineSvg-sc-45a1y2-0 gfYsDE fetched-icon">
                                 <path
